--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -9,13 +9,20 @@
   color: var(--color-header-primary);
   justify-content: space-between;
   padding: 0 32px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  position: relative;
+  z-index: 24;
 
   &--default {
-    background-color: red;
+    background-color: var(--color-foreground);
   }
 
   &--transparent {
     background-color: transparent;
+  }
+
+  &--no-shadow {
+    box-shadow: none;
   }
 
   &__logo {
