--- a/src/styles/theme/_tokens.scss
+++ b/src/styles/theme/_tokens.scss
@@ -10,6 +10,10 @@
   --blue-700: #032e80;
   --blue-800: #02225e;
   --blue-900: #001640;
+  --gray-100: #e1e3e8;
+  --gray-200: #cdd0d7;
+  --gray-500: #666c78;
   --gray-700: #293245;
+  --gray-800: #151d2f;
   --gray-900: #0b1426;
 }
