--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -8,7 +8,7 @@
   font-weight: bold;
   color: var(--color-header-primary);
   justify-content: space-between;
-  padding: 0 32px;
+  padding: 0 16px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
   position: relative;
   z-index: 24;
@@ -28,9 +28,13 @@
   &__logo {
     &__link {
       display: flex;
-      align-items: center;
+      align-items: flex-end;
       text-decoration: none;
       color: var(--color-header-primary);
+    }
+
+    span {
+      margin-bottom: 4px;
     }
   }
 
@@ -43,5 +47,6 @@
 @media only screen and (min-width: breakpoint(md)) {
   .c-header {
     height: 80px;
+    padding: 0 32px;
   }
 }
