fix: chat warnings color

--- a/src/app/chat/_chat.scss
+++ b/src/app/chat/_chat.scss
@@ -19,6 +19,10 @@
     flex-direction: column-reverse;
     padding: 16px;
     gap: 4px;
+
+    &__warnings {
+      color: var(--color-text);
+    }
   }
 
   &__pairing-indicator {
