fix: buttons color at hover and active

--- a/src/app/chat/_chat.scss
+++ b/src/app/chat/_chat.scss
@@ -74,6 +74,11 @@
 
     &:hover {
       cursor: pointer;
+      filter: brightness(85%);
+    }
+
+    &:active {
+      filter: brightness(75%);
     }
 
     &__icon {
