--- a/src/components/Button/_button.scss
+++ b/src/components/Button/_button.scss
@@ -8,6 +8,11 @@
 
   &:hover {
     cursor: pointer;
+    filter: brightness(85%);
+  }
+
+  &:active {
+    filter: brightness(75%);
   }
 
   &--solid,
