--- a/src/styles/theme/_tokens.scss
+++ b/src/styles/theme/_tokens.scss
@@ -10,6 +10,8 @@
   --blue-700: #032e80;
   --blue-800: #02225e;
   --blue-900: #001640;
+  --red-400: #f66f5d;
+  --red-500: #dd4733;
   --gray-100: #e1e3e8;
   --gray-200: #cdd0d7;
   --gray-500: #666c78;
