--- a/src/styles/theme/_tokens.scss
+++ b/src/styles/theme/_tokens.scss
@@ -14,6 +14,7 @@
   --red-500: #dd4733;
   --gray-100: #e1e3e8;
   --gray-200: #cdd0d7;
+  --gray-400: #8d919a;
   --gray-500: #666c78;
   --gray-700: #293245;
   --gray-800: #151d2f;
