--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -42,6 +42,11 @@
     height: 35px;
     width: 35px;
   }
+
+  &__children {
+    display: flex;
+    gap: 16px;
+  }
 }
 
 @media only screen and (min-width: breakpoint(md)) {
